--- a/in/params.in
+++ b/in/params.in
@@ -1,13 +1,13 @@
-LX                     33
-LY                     33
-LZ                     99
+LX                     11
+LY                     11
+LZ                     5
 characteristic_length  40
 NumFrames              10
 FrameRate              100
-tau[0]                 0.56
+tau[0]                 1.
 gforce_x[0]            0.0000
 gforce_y[0]            0.000
-gforce_z[0]            0.000001
+gforce_z[0]            0.001
 end_grav[0]            0
 tau[1]                 1.0
 gforce_x[1]            0.00
@@ -17,7 +17,6 @@ end_grav[1]            0
 buoyancy               0
 incompressible         0
 simple_diffusion       0
-rhow                   1.0
 rho_A                  1.0
 rho_B                  0.16
 rho_sigma              0.0
@@ -37,17 +36,27 @@ rho_in                 1.01
 rho_out                0.99
 ux_in                  0.00 
 ux_out                 0.00
+uy_in                  0.00 
+uy_out                 0.00
 uz_in                  0.001
 uz_out                 -0.001
 big_V0                 0.
 big_V0_solid[0]        0.
 big_V0_solid[1]        0.
-ns_flag                0
-ns                     0.0
+ns_flag                1
+ns                     0.5
 ic_poisseuille         0
 bc_poisseuille         0
 bc_slip_north          0
 bc_sigma_slip          0
+pressure_t_in[0]       0
+pressure_b_in[0]       0
+pressure_t_out[0]      0
+pressure_b_out[0]      0
+velocity_t_in[0]       0
+velocity_b_in[0]       0
+velocity_t_out[0]      0
+velocity_b_out[0]      0
 pressure_n_in[0]       0
 pressure_s_in[0]       0
 pressure_n_out[0]      0
@@ -64,6 +73,14 @@ velocity_e_in[0]       0
 velocity_w_in[0]       0
 velocity_e_out[0]      0
 velocity_w_out[0]      0
+pressure_t_in[1]       0
+pressure_b_in[1]       0
+pressure_t_out[1]      0
+pressure_b_out[1]      0
+velocity_t_in[1]       0
+velocity_b_in[1]       0
+velocity_t_out[1]      0
+velocity_b_out[1]      0
 pressure_n_in[1]       0
 pressure_s_in[1]       0
 pressure_n_out[1]      0
@@ -80,6 +97,14 @@ velocity_e_in[1]       0
 velocity_w_in[1]       0
 velocity_e_out[1]      0
 velocity_w_out[1]      0
+constcon_t_in          0
+constcon_b_in          0
+constcon_t_out         0
+constcon_b_out         0
+constflx_t_in          0
+constflx_b_in          0
+constflx_t_out         0
+constflx_b_out         0
 constcon_n_in          0
 constcon_s_in          0
 constcon_n_out         0
@@ -96,6 +121,8 @@ constflx_e_in          0
 constflx_w_in          0
 constflx_e_out         0
 constflx_w_out         0
+zeroconcgrad_t         0
+zeroconcgrad_b         0
 zeroconcgrad_n         0
 zeroconcgrad_s         0
 zeroconcgrad_e         0
@@ -103,7 +130,7 @@ zeroconcgrad_w         0
 zeroconcgrad_full      0
 plot_scale_dynamic     0
 use_colormap           0
-initial_condition      0
+initial_condition      1
 x0                     15.
 y0                     15.
 z0                     6.
