--- a/in/params.in
+++ b/in/params.in
@@ -1,16 +1,16 @@
-LX                     21
-LY                     21
-LZ                     21
+LX                     33
+LY                     33
+LZ                     99
 characteristic_length  40
 NumFrames              10
 FrameRate              100
 tau[0]                 1.
-gforce_x[0]            0.0000
+gforce_x[0]            0.
 gforce_y[0]            0.000
-gforce_z[0]            0.001
+gforce_z[0]            0.000
 end_grav[0]            0
 tau[1]                 1.0
-gforce_x[1]            0.00
+gforce_x[1]            0.000
 gforce_y[1]            0.00
 gforce_z[1]            0.00
 end_grav[1]            0
@@ -18,7 +18,7 @@ buoyancy               0
 incompressible         0
 simple_diffusion       0
 rho_A                  1.0
-rho_B                  1.0
+rho_B                  0.001
 rho_sigma              0.0
 rho_sigma_in           0.0
 rho_sigma_out          0.0
@@ -38,9 +38,9 @@ ux_in                  0.00
 ux_out                 0.00
 uy_in                  0.00 
 uy_out                 0.00
-uz_in                  0.001
-uz_out                -0.001
-big_V0                 0.
+uz_in                  -0.01
+uz_out                -0.01
+big_V0                 3.5
 big_V0_solid[0]        0.
 big_V0_solid[1]        0.
 ns_flag                0
@@ -49,10 +49,10 @@ ic_poisseuille         0
 bc_poisseuille         0
 bc_slip_north          0
 bc_sigma_slip          0
-pressure_t_in[0]       1
+pressure_t_in[0]       0
 pressure_b_in[0]       0
 pressure_t_out[0]      0
-pressure_b_out[0]      1
+pressure_b_out[0]      0
 velocity_t_in[0]       0
 velocity_b_in[0]       0
 velocity_t_out[0]      0
@@ -77,10 +77,10 @@ pressure_t_in[1]       0
 pressure_b_in[1]       0
 pressure_t_out[1]      0
 pressure_b_out[1]      0
-velocity_t_in[1]       0
+velocity_t_in[1]       1
 velocity_b_in[1]       0
 velocity_t_out[1]      0
-velocity_b_out[1]      0
+velocity_b_out[1]      1
 pressure_n_in[1]       0
 pressure_s_in[1]       0
 pressure_n_out[1]      0
@@ -130,24 +130,24 @@ zeroconcgrad_w         0
 zeroconcgrad_full      0
 plot_scale_dynamic     0
 use_colormap           0
-initial_condition      0
-x0                    15.
-y0                    15.
-z0                     6.
-r0                     6.
-cut                    0.35
-x1                    22
-x2                    42
-y1                    22
-y2                    42
-z1                    22
-z2                    42
-rel_x1                 0.0
-rel_x2                 1.0
-rel_y1                 0.0
-rel_y2                 1.0
-rel_z1                 0.95
-rel_z2                 1
+initial_condition      3
+x0                    17
+y0                    17
+z0                     77
+r0                     10
+cut                    -1.
+x1                    -1
+x2                    -1
+y1                    -1
+y2                    -1
+z1                    -1
+z2                    -1
+rel_x1                 0.4
+rel_x2                 0.6
+rel_y1                 0.4
+rel_y2                 0.6
+rel_z1                 0.4
+rel_z2                 0.6
 dump_rho               1
 dump_u                 1
 dump_force             0
